# cup-notifier

./: .gitignore  .releaserc.json  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  compose.yaml  config.yaml  rust-toolchain.toml  schema.json
.devcontainer/: devcontainer.json
.github/workflows/: build_and_publish.yaml
src/: cup.rs  discord.rs  lib.rs  main.rs  scheduler.rs  setup.rs
